<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity"
    android:background="@drawable/background_menu" >

    <TextView
            android:textColor="@color/mainLogoColor"
            android:text="@string/main_title"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:gravity="center"
            android:textSize="@dimen/main_title_font_size"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="64dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"/>
    <TextView
            android:text="@string/main_subtitle"
            android:textColor="@color/mainSubTitleColor"
            android:gravity="center"
            android:textSize="@dimen/main_subtitle_font_size"
            android:fontFamily="@font/arial_rounded_mt_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvSubTitle" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="32dp"/>
    <TextView
            android:textColor="#FFF"
            android:text="@string/developed_by"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvFooter" app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"/>

    <Button
            android:textSize="@dimen/text_button_font_size"
            android:text="@string/button_exit"
            android:id="@+id/btExit"
            style="@style/custom_button"
            app:layout_constraintBottom_toTopOf="@+id/tvFooter" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="42dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="42dp" android:layout_marginBottom="64dp"/>
    <Button
            android:text="@string/button_new_game"
            style="@style/custom_button"
            android:id="@+id/btNewGame" app:layout_constraintBottom_toTopOf="@+id/btExit"
            app:layout_constraintStart_toStartOf="@+id/btExit" app:layout_constraintEnd_toEndOf="@+id/btExit"
            android:layout_marginBottom="42dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>